# src/types/users.ts
@@ -1,4 +1,3 @@
-
 import { StatusAccount } from "./constants";
 import { Document } from "mongoose";
 export interface IUser {
@@ -9,7 +8,7 @@ export interface IUser {
   roleName: string;
   createdAt: Date;
   updatedAt: Date;
-  posts: Document[]
+  posts: Document[];
 }
 
 export interface CreateUserRequest {
@@ -29,11 +28,21 @@ export interface LoginRequest {
   password: string;
 }
 
-export interface UserRequestQuery{
+export interface UserRequestQuery {
   currentPage?: number;
   size?: number;
   roleName?: string;
   status?: StatusAccount;
 }
 
-export type UserCollection = Document & IUser
+export type UserCollection = Document & IUser;
+
+export interface ICookies{
+  refreshToken?: string
+}
+
+export interface IDecodedUser {
+  id: string,
+  username:string,
+  roleName: string
+}
